Fixed dropdown overflow issue in bootstrap tables

--- a/app/assets/stylesheets/blocks/_tables.scss
+++ b/app/assets/stylesheets/blocks/_tables.scss
@@ -48,7 +48,7 @@ th.download-column {
 
 @media (min-width: 768px) {
   .table-responsive {
-    overflow: visible;
+    overflow: visible !important;
   }
 }
 
